# KDE5

./: README  build-kde5.sh  build-qt5.sh  get-kde4.sh  get-qt5.sh
Modules/: FindQt5.cmake
kdelibs-4.7.4/: CMakeLists.txt  Makefile  build-kde5.sh
kdelibs-4.7.4/cmake/modules/: CMakeLists.txt  FindACL.cmake  FindKDE5Internal.cmake  FindQt5.cmake  FindX11.cmake  KDE5Defaults.cmake  KDE5Macros.cmake  NepomukAddOntologyClasses.cmake  NepomukMacros.cmake  Qt5Macros.cmake  kde5uic.cmake
kdelibs-4.7.4/dnssd/: CMakeLists.txt
kdelibs-4.7.4/doc/checkXML/: CMakeLists.txt
kdelibs-4.7.4/doc/kbuildsycoca4/: CMakeLists.txt
kdelibs-4.7.4/doc/kconfig_compiler/: CMakeLists.txt
kdelibs-4.7.4/doc/kcookiejar4/: CMakeLists.txt
kdelibs-4.7.4/doc/kde4-config/: CMakeLists.txt
kdelibs-4.7.4/doc/kded4/: CMakeLists.txt
kdelibs-4.7.4/doc/kdeinit4/: CMakeLists.txt
kdelibs-4.7.4/doc/kdeoptions/: CMakeLists.txt
kdelibs-4.7.4/doc/kioslave/data/: CMakeLists.txt
kdelibs-4.7.4/doc/kioslave/file/: CMakeLists.txt
kdelibs-4.7.4/doc/kioslave/ftp/: CMakeLists.txt
kdelibs-4.7.4/doc/kjs/: CMakeLists.txt
kdelibs-4.7.4/doc/kjscmd/: CMakeLists.txt
kdelibs-4.7.4/doc/kross/: CMakeLists.txt
kdelibs-4.7.4/doc/makekdewidgets/: CMakeLists.txt
kdelibs-4.7.4/doc/meinproc4/: CMakeLists.txt
kdelibs-4.7.4/doc/preparetips/: CMakeLists.txt
kdelibs-4.7.4/doc/qtoptions/: CMakeLists.txt
kdelibs-4.7.4/doc/sonnet/: CMakeLists.txt
kdelibs-4.7.4/experimental/: CMakeLists.txt
kdelibs-4.7.4/experimental/libkactivities/: CMakeLists.txt
kdelibs-4.7.4/experimental/libkdeclarative/: CMakeLists.txt
kdelibs-4.7.4/interfaces/kmediaplayer/: CMakeLists.txt
kdelibs-4.7.4/interfaces/kmediaplayer/kfileaudiopreview/: CMakeLists.txt
kdelibs-4.7.4/interfaces/ktexteditor/: CMakeLists.txt
kdelibs-4.7.4/kconf_update/: CMakeLists.txt
kdelibs-4.7.4/kconf_update/tests/: CMakeLists.txt
kdelibs-4.7.4/kde3support/: CMakeLists.txt
kdelibs-4.7.4/kde3support/kunittest/: CMakeLists.txt
kdelibs-4.7.4/kde3support/tests/: CMakeLists.txt
kdelibs-4.7.4/kdecore/: CMakeLists.txt
kdelibs-4.7.4/kdecore/auth/: ConfigureChecks.cmake
kdelibs-4.7.4/kdecore/kconfig_compiler/: CMakeLists.txt
kdelibs-4.7.4/kdecore/tests/: CMakeLists.txt
kdelibs-4.7.4/kded/: CMakeLists.txt
kdelibs-4.7.4/kded/tests/: CMakeLists.txt
kdelibs-4.7.4/kdesu/: CMakeLists.txt
kdelibs-4.7.4/kdeui/: CMakeLists.txt
kdelibs-4.7.4/kdeui/tests/: CMakeLists.txt
kdelibs-4.7.4/kdeui/tests/krichtexteditor/: CMakeLists.txt
kdelibs-4.7.4/kdewebkit/: CMakeLists.txt
kdelibs-4.7.4/kdewidgets/: CMakeLists.txt
kdelibs-4.7.4/kdoctools/: CMakeLists.txt
kdelibs-4.7.4/kfile/: CMakeLists.txt
kdelibs-4.7.4/kfile/tests/: CMakeLists.txt
kdelibs-4.7.4/khtml/: CMakeLists.txt
kdelibs-4.7.4/khtml/ecma/: CMakeLists.txt
kdelibs-4.7.4/khtml/java/: CMakeLists.txt
kdelibs-4.7.4/khtml/java/tests/: CMakeLists.txt
kdelibs-4.7.4/khtml/kmultipart/: CMakeLists.txt
kdelibs-4.7.4/khtml/pics/: CMakeLists.txt
kdelibs-4.7.4/khtml/tests/: CMakeLists.txt
kdelibs-4.7.4/kimgio/: CMakeLists.txt
kdelibs-4.7.4/kinit/: CMakeLists.txt
kdelibs-4.7.4/kinit/tests/: CMakeLists.txt
kdelibs-4.7.4/kio/: CMakeLists.txt
kdelibs-4.7.4/kio/kssl/kcm/: CMakeLists.txt
kdelibs-4.7.4/kio/misc/: CMakeLists.txt
kdelibs-4.7.4/kio/tests/: CMakeLists.txt
kdelibs-4.7.4/kioslave/file/: CMakeLists.txt
kdelibs-4.7.4/kioslave/ftp/: CMakeLists.txt
kdelibs-4.7.4/kioslave/http/: CMakeLists.txt
kdelibs-4.7.4/kioslave/http/kcookiejar/tests/: CMakeLists.txt
kdelibs-4.7.4/kioslave/metainfo/: CMakeLists.txt
kdelibs-4.7.4/kjs/: CMakeLists.txt
kdelibs-4.7.4/kjs/api/: CMakeLists.txt
kdelibs-4.7.4/kjs/tests/: CMakeLists.txt
kdelibs-4.7.4/kjs/wtf/: CMakeLists.txt
kdelibs-4.7.4/kjsembed/: CMakeLists.txt
kdelibs-4.7.4/kjsembed/examples/kjsconsole/: CMakeLists.txt
kdelibs-4.7.4/kjsembed/kjscmd/: CMakeLists.txt
kdelibs-4.7.4/kjsembed/kjsembed/: CMakeLists.txt
kdelibs-4.7.4/kjsembed/qtonly/: CMakeLists.txt
kdelibs-4.7.4/knewstuff/knewstuff2/: CMakeLists.txt
kdelibs-4.7.4/knewstuff/knewstuff3/: CMakeLists.txt
kdelibs-4.7.4/knewstuff/tests/: CMakeLists.txt
kdelibs-4.7.4/knotify/: CMakeLists.txt
kdelibs-4.7.4/knotify/config/: CMakeLists.txt
kdelibs-4.7.4/knotify/tests/: CMakeLists.txt
kdelibs-4.7.4/kparts/: CMakeLists.txt
kdelibs-4.7.4/kparts/tests/: CMakeLists.txt
kdelibs-4.7.4/kpty/: CMakeLists.txt
kdelibs-4.7.4/kpty/tests/: CMakeLists.txt
kdelibs-4.7.4/kross/console/: CMakeLists.txt
kdelibs-4.7.4/kross/core/: CMakeLists.txt
kdelibs-4.7.4/kross/kjs/: CMakeLists.txt
kdelibs-4.7.4/kross/modules/: CMakeLists.txt
kdelibs-4.7.4/kross/qts/: CMakeLists.txt
kdelibs-4.7.4/kross/test/: CMakeLists.txt
kdelibs-4.7.4/kross/ui/: CMakeLists.txt
kdelibs-4.7.4/kunitconversion/: CMakeLists.txt
kdelibs-4.7.4/kunitconversion/tests/: CMakeLists.txt
kdelibs-4.7.4/kutils/: CMakeLists.txt
kdelibs-4.7.4/nepomuk/: CMakeLists.txt
kdelibs-4.7.4/nepomuk/query/: CMakeLists.txt
kdelibs-4.7.4/nepomuk/rcgen/: CMakeLists.txt
kdelibs-4.7.4/nepomuk/test/: CMakeLists.txt
kdelibs-4.7.4/nepomuk/utils/: CMakeLists.txt
kdelibs-4.7.4/plasma/: CMakeLists.txt
kdelibs-4.7.4/plasma/tests/: CMakeLists.txt
kdelibs-4.7.4/plasma/tests/testcontainmentactionsplugin/: CMakeLists.txt
kdelibs-4.7.4/plasma/tests/testengine/: CMakeLists.txt
kdelibs-4.7.4/security/crypto/: CMakeLists.txt
kdelibs-4.7.4/security/kcert/: CMakeLists.txt
kdelibs-4.7.4/solid/: CMakeLists.txt
kdelibs-4.7.4/solid/solid/: CMakeLists.txt
kdelibs-4.7.4/solid/tests/: CMakeLists.txt
kdelibs-4.7.4/sonnet/plugins/: CMakeLists.txt
kdelibs-4.7.4/sonnet/unicode/: CMakeLists.txt
kdelibs-4.7.4/threadweaver/Examples/QProcessJob/: CMakeLists.txt
kdelibs-4.7.4/threadweaver/Experimental/: CMakeLists.txt
kdelibs-4.7.4/threadweaver/Tests/: CMakeLists.txt
kdelibs-4.7.4/threadweaver/Weaver/: CMakeLists.txt
kdelibs-4.7.4/threadweaver/WeaverGui/: CMakeLists.txt
qt5-lab/: CMakeLists.txt  HelloWidget.cpp  HelloWidget.h  MainWindow.cpp  MainWindow.h  Makefile  Rakefile  hello.pro  main.cpp
(+33 files in other folders)
