CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(HelloWorldQt)

SET(QT5_DIR /opt/qt5)

SET(CMAKE_MODULE_PATH ${QT5_DIR}/Modules)
 
SET(CMAKE_BUILD_TYPE Release)
 
SET(CMAKE_CXX_FLAGS "-Wall")
 
# QT4 Handling
FIND_PACKAGE(Qt5 REQUIRED)
 
INCLUDE(${QT_USE_FILE})
 
SET( HWQ_Qt5_SRC
	MainWindow.h
	HelloWidget.h
)
SET( HWQ_Qt5_UI
)
SET( HWQ_Qt5_RES
)
 
QT5_WRAP_CPP(HWQ_MOC_CPP ${HWQ_Qt5_SRC})
QT5_WRAP_UI(HWQ_UI_CPP ${HWQ_Qt5_UI})
QT5_ADD_RESOURCES(HWQ_RES_H ${HWQ_Qt5_RES})
 
INCLUDE_DIRECTORIES( . )
 
# General
SET( HWQ_SRC
	main.cpp
	MainWindow.cpp
	HelloWidget.cpp
)
 
SET( HWQ_LIB
	${QT_LIBRARIES}
)
 
ADD_EXECUTABLE( HelloWorldQt ${HWQ_SRC} )
TARGET_LINK_LIBRARIES( HelloWorldQt ${HWQ_LIB} )
INSTALL_TARGETS( /bin HelloWorldQt)
